Comment out announcements link in index.html
Comment out the link to announcements page in index.html

--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
                     <h3>For Partners</h3>
                     <p>Become a host organization</p>
                 </a>
-                <a href="pages/announcements.html" class="link-card">
+                <!--<a href="pages/announcements.html" class="link-card">
                     <i class="fas fa-bullhorn"></i>
                     <h3>For Announcements</h3>
                     <p>Important Dates and Announcements</p>
-                </a>
+                </a>-->
                 <a href="pages/support.html" class="link-card">
                     <i class="fas fa-headset"></i>
                     <h3>For Support</h3>
