Update footer links to remove redundant paths

--- a/pages/support.html
+++ b/pages/support.html
@@ -267,10 +267,10 @@
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
-                    <a href="pages/students.html">Student Resources</a>
-                    <a href="pages/supervisors.html">Supervisor Guidelines</a>
-                    <a href="pages/partners.html">Partner Information</a>
-                    <a href="pages/support.html">Support & Contact</a>
+                    <a href="students.html">Student Resources</a>
+                    <a href="supervisors.html">Supervisor Guidelines</a>
+                    <a href="partners.html">Partner Information</a>
+                    <a href="support.html">Support & Contact</a>
                 </div>
                 <div class="footer-section">
                     <h3>Office Hours</h3>
