Add FAQ category div to students.html

--- a/pages/students.html
+++ b/pages/students.html
@@ -167,7 +167,9 @@
                 <i class="fas fa-question-circle"></i> Frequently Asked
                 Questions
               </h2>
-              <div class="faq-list">
+              
+              <div class="faq-category">
+
                 <div class="faq-item">
                   <h3>What is the duration of the internship?</h3>
                   <p>
