--- a/pages/students.html
+++ b/pages/students.html
@@ -162,14 +162,14 @@
             </div>
 
             <!-- FAQs -->
-            <div class="info-card">
+            <div class="info-card"  id="faqs">
               <h2>
                 <i class="fas fa-question-circle"></i> Frequently Asked
                 Questions
               </h2>
-              
+              <div class="faq-categories">
               <div class="faq-category">
-
+                
                 <div class="faq-item">
                   <h3>What is the duration of the internship?</h3>
                   <p>
@@ -200,6 +200,7 @@
                     evaluations, report quality, and weekly log submissions.
                   </p>
                 </div>
+              </div>
               </div>
             </div>
           </div>
