Refactor FAQ section by removing empty divs
Removed unnecessary FAQ category divs for cleaner structure.

--- a/pages/students.html
+++ b/pages/students.html
@@ -167,9 +167,8 @@
                 <i class="fas fa-question-circle"></i> Frequently Asked
                 Questions
               </h2>
-              <div class="faq-categories">
-              <div class="faq-category">
-                
+             
+              <div class="faq-list"> 
                 <div class="faq-item">
                   <h3>What is the duration of the internship?</h3>
                   <p>
@@ -200,7 +199,6 @@
                     evaluations, report quality, and weekly log submissions.
                   </p>
                 </div>
-              </div>
               </div>
             </div>
           </div>
